--- a/css/result.sass
+++ b/css/result.sass
@@ -29,7 +29,7 @@ $resultHeight: 16em
     padding: 0 0 0.5em 0
     color: $primaryColor
     border-bottom: 1px solid $primaryColor
-    line-height: 4.4em
+    line-height: 2.4em
     hyphens: auto
     span
       display: inline-block
@@ -89,7 +89,7 @@ $resultHeight: 16em
 
 .result-meta
   border-top: 1px solid $white
-  font-size: 0.7em
+  font-size: 1em
   line-height: 1.5
   padding: 1em 0
 .result-meta-lead
@@ -99,7 +99,7 @@ $resultHeight: 16em
   font-size: 1em
   line-height: 1.5
   color: $black
-  margin-top: 1.2em
+  margin-top: 0.6em
 
 .result-actions
   font-size: 0.9em
@@ -180,6 +180,9 @@ $resultHeight: 16em
 .result-state
   cursor: pointer
 
+.result-preview
+  text-align: left
+
 .dead 
   background: darken($white, 1%)
   color: lighten(#c39979, 10%)
@@ -189,7 +192,7 @@ $resultHeight: 16em
 
 @media screen and (max-width: 990px)
   .result
-    width: 49.5%
+    width: 48%
   .results
     padding-bottom: 3em
 
